# waio

./: .gitignore  Cargo.toml  README.md  README_RU.md
.qwen/: settings.json
docs/: plan.md  rs_arch.md
docs/auras/: README.md  file-format.md  lua-api.md  slint.md
docs/lib/: calloop_doc.md  slint_doc.md  slint_interpreter_doc.md  smithay_client_toolkit_doc.md
examples/clock-bar/: aura.json  aura.wa  clock-bar.lua
scripts/docs/: calloop.py  slint.py  slint_interpreter.py  smithay_client_toolkit.py
