[workspace]
resolver = "2"
members = ["packages/shared", "packages/daemon", "packages/cli"]

[workspace.dependencies]
slint = "1.15"
slint-interpreter = { version = "1.15", features = ["display-diagnostics", "internal"] }
mlua = { version = "0.11", features = ["lua54", "send", "async"] }
smithay-client-toolkit = "0.20"
wayland-protocols-wlr = "0.3"
wayland-protocols = { version = "0.32", features = ["client"] }
calloop = "0.14"
calloop-wayland-source = "0.4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
chrono = "0.4"
tempfile = "3"
serde_yaml = "0.9"
regex = "1"
